--- a/success.html
+++ b/success.html
@@ -104,7 +104,14 @@
                                 <a href="about.html" class="nav-item nav-link">من نحن</a>
                                 <!-- <a href="" class="nav-item nav-link">الخدمات</a> -->
                                 <a href="service.html" class="nav-item nav-link">بعض أعمالنا</a>
-                                <a href="contact.html" class="nav-item nav-link action">أتصل بنا</a>
+                                <!-- <div class="nav-item dropdown">
+                                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
+                                    <div class="dropdown-menu">
+                                        <a href="blog.html" class="dropdown-item">Blog Page</a>
+                                        <a href="single.html" class="dropdown-item">Single Page</a>
+                                    </div>
+                                </div> -->
+                                <a href="contact.html" class="nav-item nav-link active">أتصل بنا</a>
                             </div>
                            
                         </div>
@@ -122,60 +129,7 @@
                         <h2>للأستفسار أو للطلبات</h2>
                     </div>
                     <div class="row">
-                        <div class="col-md-6">
-                            <div class="contact-info">
-                                <div class="contact-item">
-                                    <i class="flaticon-address"></i>
-                                    <div class="contact-text">
-                                        <h2>الموقع - العنوان</h2>
-                                        <p>جده - السعوديــه</p>
-                                    </div>
-                                </div>
-                                <div class="contact-item">
-                                    <i class="flaticon-call"></i>
-                                    <div class="contact-text">
-                                        <h2>التليــفون</h2>
-                                        <p>0544662872</p>
-                                    </div>
-                                </div>
-                                <!-- <div class="contact-item">
-                                    <i class="flaticon-send-mail"></i>
-                                    <div class="contact-text">
-                                        <h2>Email</h2>
-                                        <p>info@example.com</p>
-                                    </div>
-                                </div> -->
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="contact-form">
-                                <div id="success"></div>
-                                <form target="_blank"  action="https://formsubmit.co/info@abuhabiba.ptsshippingline.com" method="post" name="sentMessage" id="contactForm" novalidate="novalidate">
-                                    <input type="text" name="_honey" style="display: none;"/>
-                                    <input type="hidden" name="_captcha" value="false">
-                                    <input type="hidden" name="_next" value="https://ptsshippingline.com/metal/success.html">
-                                    <div class="control-group">
-                                        <input type="text" class="form-control" id="name" placeholder="الأسم" required="required" data-validation-required-message="Please enter your name" required/>
-                                        <p class="help-block text-danger"></p>
-                                    </div>
-                                    <div class="control-group">
-                                        <input type="email" class="form-control" id="email" placeholder="البريد الألكتروني" required="required" data-validation-required-message="Please enter your email" required/>
-                                        <p class="help-block text-danger"></p>
-                                    </div>
-                                    <div class="control-group">
-                                        <input type="text" class="form-control" id="subject" placeholder="العنوان" required="required" data-validation-required-message="Please enter a subject" required/>
-                                        <p class="help-block text-danger"></p>
-                                    </div>
-                                    <div class="control-group">
-                                        <textarea class="form-control" id="message" placeholder="الرسالة" required="required" data-validation-required-message="Please enter your message" required></textarea>
-                                        <p class="help-block text-danger"></p>
-                                    </div>
-                                    <div>
-                                        <button class="tn btn-lg btn-dark btn-block" style="width: 100%;" type="submit" id="sendMessageButton">أرســال</button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
+                        <h2>تم أستقبال طلبكم و سوف يتم الرد عليكم في اقرب وقت ممكن  مع تحياتى أبو حبيبه.</h2>
                     </div>
                 </div>
             </div>
