--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,7 @@
                         <div class="col-md-6">
                             <div class="contact-form">
                                 <div id="success"></div>
-                                <form target="_blank"  action="https://formsubmit.co/info@abuhabiba.ptsshippingline.com" method="post" name="sentMessage" id="contactForm" novalidate="novalidate">
+                                <form target="_blank"  action="" method="post" name="sentMessage" id="contactForm" novalidate="novalidate">
                                     <input type="text" name="_honey" style="display: none;"/>
                                     <input type="hidden" name="_captcha" value="false">
                                     <input type="hidden" name="_next" value="https://ptsshippingline.com/metal/success.html">
