--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@
                                 <form target="_blank"  action="" method="post" name="sentMessage" id="contactForm" novalidate="novalidate">
                                     <input type="text" name="_honey" style="display: none;"/>
                                     <input type="hidden" name="_captcha" value="false">
-                                    <input type="hidden" name="_next" value="https://ptsshippingline.com/metal/success.html">
+                                    <!-- <input type="hidden" name="_next" value="https://ptsshippingline.com/metal/success.html"> -->
                                     <div class="control-group">
                                         <input type="text" class="form-control" id="name" placeholder="الأسم" required="required" data-validation-required-message="Please enter your name" required/>
                                         <p class="help-block text-danger"></p>
