--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
                                 <a href="about.html" class="nav-item nav-link">من نحن</a>
                                 <!-- <a href="" class="nav-item nav-link">الخدمات</a> -->
                                 <a href="service.html" class="nav-item nav-link">بعض أعمالنا</a>
-                                <a href="contact.html" class="nav-item nav-link action">أتصل بنا</a>
+                                <a href="contact.html" class="nav-item nav-link active">أتصل بنا</a>
                             </div>
                            
                         </div>
