--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
                         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse" >
                             <!-- mr-auto -->
                             <div class="navbar-nav ">
-                                <a href="index.html" class="nav-item nav-link active">الرئيسيــة</a>
+                                <a href="index.html" class="nav-item nav-link">الرئيسيــة</a>
                                 <a href="about.html" class="nav-item nav-link">من نحن</a>
                                 <!-- <a href="" class="nav-item nav-link">الخدمات</a> -->
                                 <a href="service.html" class="nav-item nav-link">بعض أعمالنا</a>
