--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
                                 <a href="index.html" class="nav-item nav-link ">الرئيسيــة</a>
                                 <a href="" class="nav-item nav-link active">من نحن</a>
                                 <!-- <a href="" class="nav-item nav-link">الخدمات</a> -->
-                                <a href="" class="nav-item nav-link">بعض أعمالنا</a>
+                                <a href="service.html" class="nav-item nav-link">بعض أعمالنا</a>
                                 <!-- <div class="nav-item dropdown">
                                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                                     <div class="dropdown-menu">
