--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
                             <!-- mr-auto -->
                             <div class="navbar-nav ">
                                 <a href="index.html" class="nav-item nav-link ">الرئيسيــة</a>
-                                <a href="" class="nav-item nav-link active">من نحن</a>
+                                <a href="about.html" class="nav-item nav-link active">من نحن</a>
                                 <!-- <a href="" class="nav-item nav-link">الخدمات</a> -->
                                 <a href="service.html" class="nav-item nav-link">بعض أعمالنا</a>
                                 <!-- <div class="nav-item dropdown">
