--- a/service.html
+++ b/service.html
@@ -65,7 +65,7 @@
                                 <a href="index.html" class="nav-item nav-link">الرئيسيــة</a>
                                 <a href="about.html" class="nav-item nav-link">من نحن</a>
                                 <!-- <a href="" class="nav-item nav-link">الخدمات</a> -->
-                                <a href="" class="nav-item nav-link active">بعض أعمالنا</a>
+                                <a href="service.html" class="nav-item nav-link active">بعض أعمالنا</a>
                                 <a href="contact.html" class="nav-item nav-link">أتصل بنا</a>
                             </div>
                            
